fix for navbar webkit layout bug, added animation for begin_quiz frame. edited signup page and edit profile page, and edit sponsor settings. and absolute positioning for loading icon.

--- a/static/stylesheets/accounts/accounts.css
+++ b/static/stylesheets/accounts/accounts.css
@@ -115,7 +115,11 @@ h2#header{ font-size: 1.8em; }
 
 
 #signup_reminder{
-position:absolute; top:400px; left: 270px;
+left:220px;
+position:absolute;
+text-align:center;
+top:400px;
+width:400px;
 }
 
 
