--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -277,6 +277,7 @@ font-weight:bold;
 height:20px;
 line-height:1.1em;
 margin:0px 7px -20px;
+position:absolute;
 }
 
 div#login a{
@@ -464,6 +465,7 @@ color:#EAF2F8;
 
 div.loading{
 margin: 210px 0 0 280px;
+position:absolute;
 }
 
 div.loading img{
